# IPC-box

./: .clang-format  CMakeLists.txt  README.md  ipcrm.sh
example/: CMakeLists.txt
include/mq/: msgqueue.h
include/semaphore/: semaph.h
include/shm/: shm.h  shmsync.h
include/shm_chat/: message_box.h
include/socket_local/: sockets.h
include/utils/: signals.h  sockets.h  utils.h
src/: CMakeLists.txt
src/eventfd/: CMakeLists.txt  eventfd.c
src/fifo/: CMakeLists.txt  client.c  server.c
src/mmap/: CMakeLists.txt  client.c  server.c
src/mq/: CMakeLists.txt  client.c  server.c
src/pipe/: CMakeLists.txt  pipe.c
src/semaphore/: CMakeLists.txt  client.c  semaph.c  server.c
src/shm/: CMakeLists.txt  shm.c  shm_client.c  shm_server.c
src/shm_chat/: CMakeLists.txt  client.c  message_box.c  server.c
src/shm_condition/: CMakeLists.txt  client.c  server.c
src/socket/: CMakeLists.txt  client.c  server.c
src/socket_local/: CMakeLists.txt  client.c  server.c  sockets.c
src/utils/: CMakeLists.txt  signals.c  sockets.c  utils.c
test/: CMakeLists.txt
